# kharma

./: .gitignore  .gitlab-ci-docker.yml  .gitlab-ci.yml  .gitmodules  AccretionPlotting.py  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  gridcheck.py  make.sh  makefile  plottingfromh5.py  run.bs  run.sb  run.sh  soln_kel_1024.txt  soln_kel_128.txt  soln_kel_256.txt  soln_kel_512.txt
core/: coord.c  (+7 more)
kharm/: CMakeLists.txt  U_to_P.hpp  athena.hpp  bl_coord.h  boundaries.hpp  bounds.c  coord.c  coordinate_embedding.hpp  coordinates.hpp  current.c  debug.hpp  decs.h  decs.hpp  defs.h  diag.c  diffuse.hpp  electrons.c  eos.hpp  fixup.c  fluxes.c  fluxes.hpp  for_loop.hpp  grid.hpp  grid_template.hpp  hdf5_utils.c  hdf5_utils.hpp  io.c  io.hpp  kharm.cpp  main.c  matrix.hpp  metric.c  mpi.c  mpi.hpp  ngrain.cpp  ngrain.mk  pack.c  pack.hpp  parameters.c  phys.c  (+12 more)
kharma/: CMakeLists.txt  U_to_P.hpp  boundaries.cpp  boundaries.hpp  containers.cpp  containers.hpp  coordinate_embedding.hpp  coordinate_systems.hpp  coordinates.hpp  current.cpp  current.hpp  debug.cpp  debug.hpp  decs.hpp  domain.hpp  eos.hpp  fixup.cpp  fixup.hpp  floors.cpp  floors.hpp  flux.cpp  flux.hpp  flux_functions.hpp  fluxes.cpp  fluxes.hpp  grid.cpp  grid.hpp  grim_driver.cpp  grim_driver.hpp  grmhd.cpp  grmhd.hpp  harm.cpp  harm.hpp  harm_driver.cpp  harm_driver.hpp  imex_driver.cpp  imex_driver.hpp  kharma.cpp  kharma.hpp  kharma_package.cpp  (+13 more)
kharma/b_cd/: b_cd.cpp  b_cd.hpp  seed_B_cd.cpp  seed_B_cd.hpp
kharma/b_cd_glm/: b_cd_glm.cpp  b_cd_glm.hpp  b_cd_glm_functions.hpp  seed_B_cd.cpp  seed_B_cd.hpp
kharma/b_cleanup/: b_cleanup.cpp  b_cleanup.hpp  bicgstab_solver.hpp  solvers.cpp
kharma/b_cleanup_gmg/: b_cleanup_gmg.cpp  b_cleanup_gmg.hpp  poisson_equation.hpp  solver_tasks.cpp
kharma/b_ct/: b_ct.cpp  b_ct.hpp  b_ct_boundaries.cpp  b_ct_functions.hpp  seed_B_ct.cpp
kharma/b_flux_ct/: b_flux_ct.cpp  b_flux_ct.hpp  b_flux_ct_functions.hpp  seed_B_ct.cpp  seed_B_ct.hpp  seed_B_flux_ct.cpp  seed_B_flux_ct.hpp
kharma/b_none/: b_none.cpp  b_none.hpp
kharma/boundaries/: boundaries.cpp  boundaries.hpp  boundaries_forked_cpp.txt  boundary_types.hpp  dirichlet.cpp  dirichlet.hpp  one_block_transmit.cpp  one_block_transmit.hpp
kharma/coord_output/: coord_output.cpp  coord_output.hpp
kharma/coordinates/: coordinate_embedding.hpp  coordinate_systems.hpp  coordinate_utils.hpp  gr_coordinates.bkp  gr_coordinates.cpp  gr_coordinates.hpp  matrix.hpp  root_find.hpp  tetrad.hpp
kharma/current/: current.cpp  current.hpp
kharma/driver/: imex_step.cpp  kharma_driver.cpp  kharma_driver.hpp  kharma_step.cpp  multizone_step.cpp  simple_step.cpp
kharma/electrons/: electrons.cpp  electrons.hpp  gaussian.cpp  gaussian.hpp
kharma/emhd/: emhd.cpp  emhd.hpp  emhd_limits.hpp  emhd_sources.hpp  emhd_utils.hpp
kharma/entropy/: entropy.cpp  entropy.hpp
kharma/floors/: floors.cpp  floors.hpp  floors_functions.hpp  floors_impl.hpp
kharma/flux/: flux.cpp  flux.hpp  flux_functions.hpp  fofc.cpp  get_flux.hpp  plm_inline.hpp  reconstruction.hpp
kharma/force_free/: force_free.cpp  force_free.hpp  force_free_functions.hpp
kharma/grmhd/: U_to_P.hpp  U_to_P_new.hpp  b_functions.hpp  current.cpp  current.hpp  fixup.cpp  fixup.hpp  floors.cpp  floors.hpp  flux_ct.cpp  fluxes.cpp  fluxes.hpp  grmhd.cpp  grmhd.hpp  grmhd_functions.hpp  grmhd_reductions.hpp  mhd_functions.hpp  pack.hpp  phys.hpp  phys_functions.hpp  source.cpp  source.hpp
kharma/implicit/: KokkosKernels_config.h  fix_solve.cpp  fixup.cpp  implicit.cpp  implicit.hpp
kharma/inverter/: fixup.cpp  invert_template.hpp  inverter.cpp  inverter.hpp  kastaun.hpp  onedw.hpp
kharma/ismr/: ismr.cpp  ismr.hpp
kharma/multizone/: multizone.cpp  multizone.hpp
kharma/prob/: anisotropic_conduction.hpp  b_field_tools.cpp  b_field_tools.hpp  bh_flux.hpp  blob.hpp  bondi.cpp  bondi.hpp  bz_monopole.cpp  bz_monopole.hpp  chakrabarti_torus.cpp  chakrabarti_torus.hpp  driven_turbulence.hpp  emhdmodes.hpp  emhdshock.hpp  explosion.hpp  flat_space.hpp  fm_torus.cpp  fm_torus.hpp  gizmo.cpp  gizmo.hpp  hdf5_utils.cpp  hdf5_utils.h  hubble.cpp  hubble.hpp  iharm_restart.cpp  iharm_restart.hpp  interpolation.hpp  kelvin_helmholtz.hpp  mhdmodes.hpp  noh.hpp  orszag_tang.hpp  post_initialize.cpp  post_initialize.hpp  prob_common.hpp  prob_dispatch.cpp  problem.cpp  problem.hpp  problem_generator.cpp  resize.hpp  resize_restart.cpp  (+12 more)
kharma/prob/elec/: driven_turbulence.hpp  hubble.cpp  hubble.hpp  noh.hpp
kharma/prob/emhd/: anisotropic_conduction.hpp  bondi_viscous.cpp  bondi_viscous.hpp  conducting_atmosphere.cpp  conducting_atmosphere.hpp  emhdmodes.hpp  emhdshock.hpp  fm_torus_emhd.cpp
kharma/prob/emhd/bondi_viscous_128_default/: bondi_analytic_128.txt
kharma/prob/emhd/bondi_viscous_32_default/: bondi_analytic_32.txt
kharma/prob/emhd/conducting_atmosphere_128_default/: atmosphere_soln_phi.txt  atmosphere_soln_rho.txt  atmosphere_soln_u.txt
kharma/prob/emhd/conducting_atmosphere_256_default/: atmosphere_soln_phi.txt  atmosphere_soln_rho.txt  atmosphere_soln_u.txt
kharma/prob/emhd/conducting_atmosphere_32_default/: atmosphere_soln_rho.txt
kharma/prob/emhd/conducting_atmosphere_512_default/: atmosphere_soln_phi.txt  atmosphere_soln_rCoords.txt  atmosphere_soln_rho.txt  atmosphere_soln_u.txt
kharma/prob/emhd/conducting_atmosphere_64_default/: atmosphere_soln_phi.txt  atmosphere_soln_rCoords.txt  atmosphere_soln_rho.txt  atmosphere_soln_u.txt
kharma/prob/emhd/shock_soln_1024_default/: shock_soln_dP.txt  shock_soln_q.txt  shock_soln_rho.txt
kharma/prob/emhd/shock_soln_2048_default/: shock_soln_q.txt  shock_soln_u1.txt
kharma/prob/emhd/shock_soln_256_default/: shock_soln_dP.txt  shock_soln_q.txt  (+1 more)
kharma/prob/utils/: hdf5_utils.cpp  hdf5_utils.h  interpolation.hpp  perturbation.hpp
kharma/reductions/: reductions.cpp  reductions.hpp  reductions_impl.hpp  reductions_types.hpp  reductions_variables.hpp
kharma/tracers/: tracers.cpp  tracers.hpp
kharma/viscosity/: emhd_functions.hpp  viscosity.cpp  viscosity.hpp
kharma/wind/: wind.cpp  wind.hpp
(+446 files in other folders)
